--- a/Suma2Lealtad/Views/CompanyPrepago/RecargaMasiva.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/RecargaMasiva.cshtml
@@ -1,9 +1,180 @@
 ﻿@model Suma2Lealtad.Models.PrepagoCompanyAffiliattes
 
 @{
-    ViewBag.Title = "FilterBeneficiario";
+    ViewBag.Title = "RecargaMasiva";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+@*<link href="css/bootstrap.css" rel="stylesheet">*@
+<link href="~/Content/bootstrap.css" rel="stylesheet" />
+@*<link href="css/style.css" rel="stylesheet">*@
+<link href="~/Content/style.css" rel="stylesheet" />
+
+<style type="text/css" media="screen">
+    .table-hover {
+        cursor: pointer;
+    }
+
+    .table tbody tr.active td {
+        background-color: #1C2B2B; /*#476B6B #29A329;*/
+        color: white;
+    }
+</style>
+
+
+<div class="form-group">
+
+    <div class="panel panel-default">
+
+        <div class="panel-heading clearfix panel-gradient">
+            @*<h3 class="panel-title">Afiliado  @Model.DocId / Saldos <a href="@Url.Action("Index", "Afiliado", new { numdoc = Model.DocId })" class="btn btn-success btn-md">Regresar</a></h3>*@
+            <h3 class="panel-title">Prepago / Compañia / Beneficiarios / Recarga Masiva</h3>
+            @*<input type="submit" class="btn btn-success btn-md" value="Regresar" style="padding-right: 15px; padding-left: 15px; margin-left: 0px;" />*@
+        </div>
+
+        <div class="panel-body">
+
+            <form id="commentForm" method="post" action="@Url.Action("RecargaMasiva", "CompanyPrepago")" class="form-horizontal">
+
+                <div class="form-group">
+
+                    @Html.HiddenFor(model => model.companyid)
+
+                    <div class="editor-label col-md-4 control-label">
+                        Compañia :
+                    </div>
+
+                    <div class="editor-field col-md-6">
+                        @Html.TextBoxFor(model => model.namecompañia, new { @class = "form-control", @readonly = "true" })
+                    </div>
+
+                    <div class="editor-label col-md-4 control-label">
+                        RIF :
+                    </div>
+                    <div class="editor-form col-md-6">
+                        @Html.TextBoxFor(model => model.rif, new { @class = "form-control", @readonly = "true" })
+                    </div>
+                    <div class="editor-label col-md-4 control-label">
+                        Teléfono :
+                    </div>
+                    <div class="editor-form col-md-6">
+                        @Html.TextBoxFor(model => model.phone, new { @class = "form-control", @readonly = "true" })
+                    </div>
+
+                    <div class="editor-field col-md-4">
+                        <br />
+                    </div>
+
+                    <div class="editor-label col-md-6 control-label">
+                        <input type="file" class="filestyle" data-badge="true" name="alias">
+                    </div>
+
+                    @*<div class="editor-form col-md-6 control-label">
+                        @Html.TextBoxFor(model => model.alias, new { @class = "form-control"})
+                        @Html.ValidationMessageFor(model => model.alias)
+                    </div>*@
+
+            </form>
+
+        
+
+        <!-- SECCION PARA botones de operaciones -->
+        <div class="col-md-12 col-tabla-btn">
+            <div class="pull-right">
+                <input type="submit" class="btn btn-success btn-md" value="Procesar" />
+                <a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-danger btn-md">Regresar</a>
+            </div>
+        </div>
+
+    </div>
+
+    <script src="~/Scripts/jquery-2.1.3.min.js"></script>
+    <script>
+        function ValidarMontos() {
+            $("#beneficiarios tbody tr").each(function (index) {
+                var RegExPattern = /^(\d){3,10}$/;
+                var idrow = $(this).data("row-key");
+                var campo1, campo2, campo3, campo4;
+                $(this).children("td").each(function (index2) {
+                    switch (index2) {
+                        case 0: campo1 = $(this).text();
+                            break;
+                        case 1: campo2 = $(this).text();
+                            break;
+                        case 2: campo3 = $(this).text();
+                            break;
+                        case 3: campo4 = $(this).find('.Monto').val();
+                            break;
+                    }
+                })
+                if (campo4 == "") {
+                    alert('id ' + idrow + ' no incluye recarga');
+                }
+                else if (RegExPattern.test(campo4) == false) {
+                    alert('Monto invalido (' + campo4 + ')');
+                }
+                else if (campo4 > 500) {
+                    alert('El monto excede los valores permitidos (500)');
+                }
+                else {
+                    alert('id ' + idrow + ' monto recarga: ' + campo4);
+                }
+
+            })
+            return false;
+        }
+    </script>
+
+</div>
+<!-- panel-body -->
+
+</div>
+<!-- panel -->
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@*@model Suma2Lealtad.Models.PrepagoCompanyAffiliattes
+
+@{
+    ViewBag.Title = "RecargaMasiva";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<link href="~/Content/bootstrap.css" rel="stylesheet" />
+<link href="~/Content/style.css" rel="stylesheet" />
+
+<style type="text/css" media="screen">
+    .table-hover {
+        cursor: pointer;
+    }
+
+    .table tbody tr.active td {
+        background-color: #1C2B2B;
+        color: white;
+    }
+</style>
 
 <div class="container">
 
@@ -30,7 +201,6 @@
 
                         @Html.HiddenFor(model => model.companyid)
 
-
                         <div class="editor-label col-md-4 control-label">
                             Compañia :
                         </div>
@@ -52,180 +222,89 @@
                             @Html.TextBoxFor(model => model.phone, new { @class = "form-control", @readonly = "true" })
                         </div>
 
-                        <div class="editor-label col-md-4 control-label"></div>
+                        <div class="col-md-12 col-tabla-btn">
+                            <div class="pull-right">
+                                <a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-success btn-md">Filtrar Beneficiarios</a>
+                                <a href="@Url.Action("FilterCompany", "CompanyPrepago")" class="btn btn-danger btn-md">Cancelar</a>
+                            </div>
+                        </div>
+
                         <div class="editor-field col-md-6">
                             <br />
                         </div>
 
-                        <br />
-                        <div class="editor-label col-md-4 control-label"></div>
-                        <div class="editor-field col-md-8">
-                            <span id="fields"></span>
-                        </div>
-                        <br />
+                        <table id="beneficiarios" class="table table-hover">
 
-                        <div class="form-group">
-                            <div class="col-md-12 col-btn">
-                                <div class="pull-right">
-                                    <input type="submit" class="btn btn-success btn-md" value="Cargar" />
-                                </div>
-                            </div>
-                        </div>
-                        <br />
+                            <thead>
+                                <tr>
+                                    <th>Tipo</th>
+                                    <th>Número de Documento</th>
+                                    <th>Nombre</th>
+                                    <th>Monto</th>
+                                </tr>
+                            </thead>
 
-                        <div class="form-group">
-                            <div class="col-md-12 col-btn">
-                                <div class="pull-left">
-                                    <input class="btn btn-success btn-md" onclick="this.form.file.click()" type="button" value="Seleccione Archivo">
-                                </div>
-                            </div>
-                        </div>
-
-
-
-                        
-                        <!-- form-group -->
+                        </table>
 
                     </form>
 
+                    <!-- SECCION PARA botones de operaciones -->
+                    <div class="col-md-12 col-tabla-btn">
+                        <div class="pull-right">
+                            <div class="text-left" id="capaarchivo">
+                                <input class="btn btn-success btn-md" onclick="this.form.file.click()" type="button" value="Seleccione Archivo">
+                                <span id="info" style="border: 0px solid black; border-image: none;"></span>
+                            </div>
+                            <input type="submit" class="btn btn-success btn-md" value="Procesar" />
+                            <a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-danger btn-md">Regresar</a>
+                        </div>
+                    </div>
+
                 </div>
-                <!--// panel-body -->
+
+                <script src="~/Scripts/jquery-2.1.3.min.js"></script>
+                <script>
+                    function ValidarMontos() {
+                        $("#beneficiarios tbody tr").each(function (index) {
+                            var RegExPattern = /^(\d){3,10}$/;
+                            var idrow = $(this).data("row-key");
+                            var campo1, campo2, campo3, campo4;
+                            $(this).children("td").each(function (index2) {
+                                switch (index2) {
+                                    case 0: campo1 = $(this).text();
+                                        break;
+                                    case 1: campo2 = $(this).text();
+                                        break;
+                                    case 2: campo3 = $(this).text();
+                                        break;
+                                    case 3: campo4 = $(this).find('.Monto').val();
+                                        break;
+                                }
+                            })
+                            if (campo4 == "") {
+                                alert('id ' + idrow + ' no incluye recarga');
+                            }
+                            else if (RegExPattern.test(campo4) == false) {
+                                alert('Monto invalido (' + campo4 + ')');
+                            }
+                            else if (campo4 > 500) {
+                                alert('El monto excede los valores permitidos (500)');
+                            }
+                            else {
+                                alert('id ' + idrow + ' monto recarga: ' + campo4);
+                            }
+
+                        })
+                        return false;
+                    }
+                </script>
 
             </div>
-            <!--// panel -->
+            <!-- panel-body -->
 
         </div>
-        <!--// columns -->
+        <!-- panel -->
 
     </div>
-    <!--// row -->
 
-    <script>
-
-        function validateNumDoc() {
-            var numdoc = document.getElementById('numdoc').value;
-            if (numdoc.length == 0) {
-                return false;
-            }
-
-            var RegExPattern = /^([VvEeJjGg]){1}(-){1}(\d){3,10}$/;
-            var RegExPattern2 = /^([VvEeJjGg]){1}(\d){3,10}$/;
-            var RegExPattern3 = /^([Pp]){1}(-){1}([A-Za-z0-9]){3,10}$/;
-            var RegExPattern4 = /^([Pp]){1}([A-Za-z0-9]){3,10}$/;
-
-            if (RegExPattern.test(numdoc) == false && RegExPattern2.test(numdoc) == false && RegExPattern3.test(numdoc) == false && RegExPattern4.test(numdoc) == false) {
-                spanMessage('field1', '* Formato Número de Documento Incorrecto. (V-12345678)');
-                document.getElementById('numdoc').value = "";
-                document.getElementById('numdoc').focus();
-                return false;
-            }
-            else if (RegExPattern.test(numdoc) != false) {
-                document.getElementById('numdoc').value = numdoc.toUpperCase();
-            }
-            else if (RegExPattern2.test(numdoc) != false) {
-                document.getElementById('numdoc').value = numdoc.substring(0, 1).toUpperCase() + "-" + numdoc.substring(1).toUpperCase();
-            }
-            else if (RegExPattern3.test(numdoc) != false) {
-                document.getElementById('numdoc').value = numdoc.toUpperCase();
-            }
-            else if (RegExPattern4.test(numdoc) != false) {
-                document.getElementById('numdoc').value = numdoc.substring(0, 1).toUpperCase() + "-" + numdoc.substring(1).toUpperCase();
-            }
-            document.getElementById('field1').value = "";
-            return true;
-        }
-
-        //function validateNumDoc() {
-
-        //    var numdoc = document.getElementById('numdoc').value;
-
-        //    if (numdoc.length == 0)
-        //        return false;
-
-        //    console.log(numdoc);
-
-        //    if (!numdoc.match(/^(V|E|J|G)\-\d{6,8}$/)) {
-
-        //        var span = document.getElementById('field1');
-        //        span.innerHTML = "";
-        //        span.appendChild(document.createTextNode("ExpReg No Válida!!"));
-        //        return false;
-
-        //    }
-
-        //    return true;
-
-        //}
-
-        function spanMessage(idelemento, mensaje) {
-            var span = document.getElementById(idelemento);
-            while (span.firstChild) {
-                span.removeChild(span.firstChild);
-            }
-            span.appendChild(document.createTextNode(mensaje));
-        }
-
-
-        function validateName() {
-
-            var name = document.getElementById('name').value;
-
-            if (name.length == 0)
-                return false;
-
-            //console.log(name);
-
-
-            if (!name.match(/^[a-zA-Z''-'\s]*$/)) {
-
-                //var span = document.getElementById('field2');
-                //span.innerHTML = "";
-                //span.appendChild(document.createTextNode("ExpReg No Válida."));
-                //return false;
-                spanMessage('field2', '* Formato Nombre Incorrecto.');
-                document.getElementById('name').value = " ";
-                document.getElementById('name').focus();
-                return false;
-
-            }
-
-            return true;
-
-        }
-
-
-        function validateEmail() {
-
-            var email = document.getElementById('email').value;
-
-            if (email.length == 0)
-                return false;
-
-            return true;
-
-        }
-
-        function validateForm() {
-            var numdoc = document.getElementById('numdoc').value;
-            var name = document.getElementById('name').value;
-            var email = document.getElementById('email').value;
-
-            if (numdoc.length == 0 && name.length == 0 && email.length == 0) {
-                var span = document.getElementById('fields');
-                span.innerHTML = "";
-                span.appendChild(document.createTextNode("Debe ingresar al menos un campo válido."));
-                return false;
-            } else {
-
-                if (!validateNumDoc() && !validateName() && !validateEmail()) {
-                    return false;
-                }
-
-            }
-
-        }
-
-    </script>
-
-</div>
-<!--// container -->
+</div>*@
