--- a/Suma2Lealtad/Views/CompanyPrepago/Index.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/Index.cshtml
@@ -55,7 +55,7 @@
 
                             @foreach (var item in Model)
                             {
-                                <tr>
+                                <tr data-row-key="@item.companyid">
                                     <td>
                                         @Html.DisplayFor(modelItem => item.namecompañia)
                                     </td>
@@ -92,25 +92,15 @@
 
                     </table>
 
-                    <script src="~/Scripts/jquery-2.1.3.min.js"></script>
-                    <script>
-                        $(document).ready(function () {
-                            var rowId;
-                            var colId;
-                        });
-
-                        $('.table tbody tr td:not(:last-child)').click(function () {
-                            var filatabla = $(this).closest('tr');
-                            rowId = $(filatabla).data("row-key");
-                            $('.table tbody tr').removeClass("active");
-                            $(filatabla).addClass("active");
-                        });
-                    </script>
-
                     <!-- buttons -->
                     <div class="col-md-12 col-tabla-btn">
+                        <div class="pull-left">
+                            <a id="Ordenes" class="btn btn-success btn-md" role="button">Órdenes de Recarga</a>
+                            <a id="RecargaIndividual" class="btn btn-success btn-md" role="button">Recarga Individual</a>
+                            <a id="RecargaMasiva" class="btn btn-success btn-md" role="button">Recarga Masiva</a>
+                        </div>
                         <div class="pull-right">
-                            <a href="@Url.Action("Create", "CompanyPrepago")" class="btn btn-success btn-md">Agregar Nuevo Registro</a>
+                            <a href="@Url.Action("Create", "CompanyPrepago")" class="btn btn-success btn-md">Agregar Nueva Compañia</a>
                         </div>
                     </div>
                     <!--// buttons -->
@@ -129,3 +119,49 @@
 
 </div>
 <!-- container -->
+
+<script src="~/Scripts/jquery-2.1.3.min.js"></script>
+<script>
+    $(document).ready(function () {
+        var rowId;
+        var colId;
+
+        $("#Ordenes").hide();
+        $("#RecargaIndividual").hide();
+        $("#RecargaMasiva").hide();
+    });
+
+    $('.table tbody tr td:not(:last-child)').click(function () {
+        var filatabla = $(this).closest('tr');
+        rowId = $(filatabla).data("row-key");
+        $('.table tbody tr').removeClass("active");
+        $(filatabla).addClass("active");
+        $("#Ordenes").show();
+        $("#RecargaIndividual").show();
+        $("#RecargaMasiva").show();
+    });
+
+    $("#Ordenes").click(function () {
+        var href = '@Url.Content("~/{controller}/{action}/{params}")';
+        href = href.replace("{controller}", "CompanyPrepago");
+        href = href.replace("{action}", "Ordenes");
+        href = href.replace("{params}", rowId);
+        window.location.href = href;
+    });
+
+    $("#RecargaIndividual").click(function () {
+        var href = '@Url.Content("~/{controller}/{action}/{params}")';
+         href = href.replace("{controller}", "CompanyPrepago");
+         href = href.replace("{action}", "Recargas");
+         href = href.replace("{params}", rowId);
+         window.location.href = href;
+    });
+
+    $("#RecargaMasiva").click(function () {
+        var href = '@Url.Content("~/{controller}/{action}/{params}")';
+         href = href.replace("{controller}", "CompanyPrepago");
+         href = href.replace("{action}", "RecargaMasiva");
+         href = href.replace("{params}", rowId);
+         window.location.href = href;
+     });
+</script>
