--- a/Suma2Lealtad/Views/CompanyPrepago/RecargaMasiva.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/RecargaMasiva.cshtml
@@ -70,7 +70,7 @@
         <div class="col-md-12 col-tabla-btn">
             <div class="pull-right">
                 <input type="submit" class="btn btn-success btn-md" value="Procesar" />
-                <a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { companyid = Model[0].companyid })" class="btn btn-danger btn-md">Regresar</a>
+                <a href="@Url.Action("Index", "CompanyPrepago", new { rif = Model.FirstOrDefault().rif })" class="btn btn-danger btn-md">Regresar</a>
             </div>
         </div>
 
