--- a/Suma2Lealtad/Views/CompanyPrepago/Ordenes.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/Ordenes.cshtml
@@ -21,15 +21,12 @@
     }
 </style>
 
-@*<form id="commentForm" method="post" action="@Url.Action("Index", "Afiliado")" class="form-horizontal">*@
 <div class="form-group">
 
     <div class="panel panel-default">
 
         <div class="panel-heading clearfix panel-gradient">
-            @*<h3 class="panel-title">Afiliado  @Model.DocId / Saldos <a href="@Url.Action("Index", "Afiliado", new { numdoc = Model.DocId })" class="btn btn-success btn-md">Regresar</a></h3>*@
-            <h3 class="panel-title">Prepago / Compañia / Beneficiarios</h3>
-            @*<input type="submit" class="btn btn-success btn-md" value="Regresar" style="padding-right: 15px; padding-left: 15px; margin-left: 0px;" />*@
+            <h3 class="panel-title">Prepago / Compañia / Recargas / Listado de Órdenes</h3>
         </div>
 
         <div class="panel-body">
@@ -67,10 +64,6 @@
                 <div class="col-md-12 col-tabla-btn">
                     <div class="pull-right">
                         @*
-                        <a href="@Url.Action("", "")" class="btn btn-success btn-md">Órdenes de Recarga</a>
-                        <a href="@Url.Action("Recargas", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-success btn-md">Recarga Individual</a>
-                        <a href="@Url.Action("", "")" class="btn btn-success btn-md">Recarga Masiva</a>
-                        <a href="@Url.Action("Filter", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-success btn-md">Agregar Nuevo Beneficiario</a>
                         <a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-success btn-md">Filtrar Beneficiarios</a>
                         *@
                         <a href="@Url.Action("Index", "CompanyPrepago", new { rif = Model.rif })" class="btn btn-danger btn-md">Regresar</a>
@@ -88,10 +81,10 @@
 
                 <thead>
                     <tr>
-                        <th>id</th>
-                        <th>creationdate</th>
-                        <th>status</th>
-                        <th>totalamount</th>
+                        <th>Nro. de Orden</th>
+                        <th>Fecha de Creación</th>
+                        <th>Estatus</th>
+                        <th>Monto Total</th>
                         <th class="text-center"></th>
                     </tr>
                 </thead>
@@ -114,205 +107,35 @@
                                 @Html.DisplayFor(modelItem => item.status)
                             </td>
 
-                            @*<td>
-                                @Html.DisplayFor(modelItem => item.name) @Html.DisplayFor(modelItem => item.lastname1)
-                            </td>*@
-
                             <td>
                                 @Html.DisplayFor(modelItem => item.totalamount)
                             </td>
 
-                            @*<td>
-                                @Html.DisplayFor(modelItem => item.estatus)
-                            </td>
-
-                            <td>
-                                @Html.DisplayFor(modelItem => item.pan)
-                            </td>
-
-                            <td>
-                                @Html.DisplayFor(modelItem => item.estatustarjeta)
-                            </td>*@
-
                             <td class="text-right">
-                                @{if (item.status == "N")
+                                @{if (item.status == "N") 
                                   {
-                                    <a id="@(item.id)_approve" href="@Url.Action("ProcesarOrden", "CompanyPrepago", new {companyid = Model.companyid, id = item.id })" class="btn btn-success btn-xs" >
-                                        <span class="glyphicon glyphicon-ok"></span>
+                                    <a href="@Url.Action("DetalleOrden", "CompanyPrepago", new {companyid = Model.companyid, id = item.id })" class="btn btn-success btn-xs" >
+                                        <span class="glyphicon glyphicon-zoom-in"></span>
                                     </a>
                                   }
                                 }
-                                @*<a id="@(item.id)_edit" href="@Url.Action("EditBeneficiario", "CompanyPrepago", new { id = item.id })" class="btn btn-info btn-xs" >
-                                    <span class="glyphicon glyphicon-edit"></span>
-                                </a>*@
+                                @{if (item.status == "A") 
+                                  {
+                                    <a href="@Url.Action("DetalleOrden", "CompanyPrepago", new {companyid = Model.companyid, id = item.id })" class="btn btn-success btn-xs" >
+                                        <span class="glyphicon glyphicon-zoom-in"></span>
+                                    </a>
+                                    <a href="@Url.Action("ProcesarOrden", "CompanyPrepago", new {companyid = Model.companyid, id = item.id })" class="btn btn-success btn-xs" >
+                                        <span class="glyphicon glyphicon-usd"></span>
+                                    </a>
+                                  }
+                                }
                             </td>
                         </tr>                 
                     }
                 </tbody>
 
             </table>
-
-            <!-- SECCION PARA botones de operaciones -->
-            @*<div class="col-md-12 col-btn">
-                <div class="pull-left">
-                    <a id="CrearPin" class="btn btn-success btn-md" role="button">Crear Pin</a>
-                    <a id="CambiarPin" class="btn btn-success btn-md" role="button">Cambiar Pin</a>
-                    <a id="ReiniciarPin" class="btn btn-success btn-md" role="button">Reiniciar Pin</a>
-                    <a id="ImprimirTarjeta" class="btn btn-success btn-md" role="button">Imprimir Tarjeta</a>
-                    <a id="BloquearTarjeta" class="btn btn-success btn-md" role="button">Bloquear Tarjeta</a>
-                    <a id="SuspenderTarjeta" class="btn btn-success btn-md" role="button">Suspender Tarjeta</a>
-                    <a id="ReactivarTarjeta" class="btn btn-success btn-md" role="button">Reactivar Tarjeta</a>
-                    <a id="SaldosMovimientos" class="btn btn-success btn-md" role="button">Saldos y Movimientos</a>
-                    <a id="Acreditar" class="btn btn-success btn-md" role="button">Acreditar</a>
-                </div>
-                <div class="pull-right">
-                    <a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { companyid = Model.companyid })" class="btn btn-danger btn-md">Regresar</a>
-                </div>
-            </div>*@
-
-            <script src="~/Scripts/jquery-2.1.3.min.js"></script>
-            @*<script>
-                $(document).ready(function () {
-                    var rowId;
-                    var colId;
-                    var docNumber;
-                    var statusAfiliacion;
-                    var statusTarjeta;
-
-                    $("#CrearPin").hide();
-                    $("#CambiarPin").hide();
-                    $("#ReiniciarPin").hide();
-                    $("#ImprimirTarjeta").hide();
-                    $("#BloquearTarjeta").hide();
-                    $("#SuspenderTarjeta").hide();
-                    $("#ReactivarTarjeta").hide();
-                    $("#SaldosMovimientos").hide();
-                    $("#Acreditar").hide();
-                });
-
-                $('.table tbody tr td:not(:last-child)').click(function () {
-                    var filatabla = $(this).closest('tr');
-                    rowId = $(filatabla).data("row-key");
-                    statusAfiliacion = $(filatabla).data("statusafiliacion");
-                    statusTarjeta = $(filatabla).data("statustarjeta");
-                    $('.table tbody tr').removeClass("active");
-                    $(filatabla).addClass("active");
-
-                    $("#CrearPin").hide();
-                    $("#CambiarPin").hide();
-                    $("#ReiniciarPin").hide();
-                    $("#ImprimirTarjeta").hide();
-                    $("#BloquearTarjeta").hide();
-                    $("#SuspenderTarjeta").hide();
-                    $("#ReactivarTarjeta").hide();
-                    $("#SaldosMovimientos").hide();
-                    $("#Acreditar").hide();
-
-                    if (statusAfiliacion == "Nueva") {
-                    }
-                    else if (statusAfiliacion == "Activa" && statusTarjeta == "Nueva") {
-                        $("#ImprimirTarjeta").show();
-                        $("#SaldosMovimientos").show();
-                    }
-                    else if (statusAfiliacion == "Activa" && statusTarjeta == "Activa") {
-                        $("#CrearPin").show();
-                        $("#CambiarPin").show();
-                        $("#ReiniciarPin").show();
-                        $("#BloquearTarjeta").show();
-                        $("#SuspenderTarjeta").show();
-                        $("#SaldosMovimientos").show();
-                        $("#Acreditar").show();
-                    }
-                    else if (statusAfiliacion == "Activa" && statusTarjeta == "Suspendida") {
-                        $("#CrearPin").show();
-                        $("#CambiarPin").show();
-                        $("#ReiniciarPin").show();
-                        $("#BloquearTarjeta").show();
-                        $("#ReactivarTarjeta").show();
-                        $("#SaldosMovimientos").show();
-                    }
-                });
-
-                $("#CrearPin").click(function () {
-                    var href = '@Url.Content("~/{controller}/{action}/{params}")';
-                    href = href.replace("{controller}", "Afiliado");
-                    href = href.replace("{action}", "CrearPin");
-                    href = href.replace("{params}", rowId);
-                    window.location.href = href;
-                });
-
-                $("#CambiarPin").click(function () {
-                    var href = '@Url.Content("~/{controller}/{action}/{params}")';
-                    href = href.replace("{controller}", "Afiliado");
-                    href = href.replace("{action}", "CambiarPin");
-                    href = href.replace("{params}", rowId);
-                    window.location.href = href;
-                });
-
-                $("#ReiniciarPin").click(function () {
-                    var href = '@Url.Content("~/{controller}/{action}/{params}")';
-                    href = href.replace("{controller}", "Afiliado");
-                    href = href.replace("{action}", "ReiniciarPin");
-                    href = href.replace("{params}", rowId);
-                    window.location.href = href;
-                });
-
-                $("#ImprimirTarjeta").click(function () {
-                    var href = '@Url.Content("~/{controller}/{action}/{params}")';
-                    href = href.replace("{controller}", "Afiliado");
-                    href = href.replace("{action}", "ImprimirTarjeta");
-                    href = href.replace("{params}", rowId);
-                    window.location.href = href;
-                });
-
-                $("#BloquearTarjeta").click(function () {
-                    var href = '@Url.Content("~/{controller}/{action}/{params}")';
-                    href = href.replace("{controller}", "Afiliado");
-                    href = href.replace("{action}", "BloquearTarjeta");
-                    href = href.replace("{params}", rowId);
-                    window.location.href = href;
-                });
-
-                $("#SuspenderTarjeta").click(function () {
-                    var href = '@Url.Content("~/{controller}/{action}/{params}")';
-                    href = href.replace("{controller}", "Afiliado");
-                    href = href.replace("{action}", "SuspenderTarjeta");
-                    href = href.replace("{params}", rowId);
-                    window.location.href = href;
-                });
-
-                $("#ReactivarTarjeta").click(function () {
-                    var href = '@Url.Content("~/{controller}/{action}/{params}")';
-                    href = href.replace("{controller}", "Afiliado");
-                    href = href.replace("{action}", "ReactivarTarjeta");
-                    href = href.replace("{params}", rowId);
-                    window.location.href = href;
-                });
-
-                $("#SaldosMovimientos").click(function () {
-                    var href = '@Url.Content("~/{controller}/{action}/{params}")';
-                    href = href.replace("{controller}", "Afiliado");
-                    href = href.replace("{action}", "SaldosMovimientos");
-                    href = href.replace("{params}", rowId);
-                    window.location.href = href;
-                });
-
-                $("#Acreditar").click(function () {
-                    var href = '@Url.Content("~/{controller}/{action}/{params}")';
-                    href = href.replace("{controller}", "Afiliado");
-                    href = href.replace("{action}", "Acreditar");
-                    href = href.replace("{params}", rowId);
-                    window.location.href = href;
-                });
-            </script>*@
-            <!-- SECCION PARA botones de operaciones -->
-
-            @*<div class="col-md-12 col-tabla-btn">
-                <div class="pull-right">
-                    <input type="submit" class="btn btn-success btn-md" value="Regresar" style="padding-right: 15px; padding-left: 15px; margin-left: 0px;" />
-                </div>
-            </div>*@
-
+            
         </div>
         <!-- panel-body -->
 
