--- a/Suma2Lealtad/Views/CompanyPrepago/Recargas.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/Recargas.cshtml
@@ -88,7 +88,7 @@
                     <thead>
                         <tr>
                             <th>Tipo</th>
-                            <th>Número de Documento</th>
+                            <th>Número de Documento/Cédula</th>
                             <th>Nombre</th>
                             <th>Monto</th>
                         </tr>
